[gd_scene load_steps=6 format=3 uid="uid://c6b8prnjgm61h"]

[ext_resource type="Texture2D" uid="uid://bpufup14432qa" path="res://addons/sdf_rdt/tools/icons/icon_cut_sphere.svg" id="1_cp5ue"]
[ext_resource type="Script" path="res://GUI/hud.gd" id="1_ykw6d"]
[ext_resource type="Texture2D" uid="uid://dwrg2dn551pha" path="res://addons/sdf_rdt/tools/icons/icon_cut_plane.svg" id="2_5o0jb"]
[ext_resource type="Texture2D" uid="uid://bpl1w1efrqkuy" path="res://addons/sdf_rdt/tools/icons/icon_cut_cube.svg" id="3_njkm0"]

[sub_resource type="LabelSettings" id="LabelSettings_hfnsq"]
font_size = 31

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykw6d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_right = 186.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(0, 45)
layout_mode = 2
offset_right = 186.0
offset_bottom = 45.0
grow_vertical = 0

[node name="Cut0" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(45, 0)
layout_mode = 2
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("1_cp5ue")
ignore_texture_size = true

[node name="Cut1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(45, 0)
layout_mode = 2
offset_left = 49.0
offset_right = 94.0
offset_bottom = 45.0
texture = ExtResource("2_5o0jb")
ignore_texture_size = true

[node name="Cut2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(45, 0)
layout_mode = 2
offset_left = 98.0
offset_right = 143.0
offset_bottom = 45.0
texture = ExtResource("3_njkm0")
ignore_texture_size = true

[node name="msg" type="Label" parent="VBoxContainer"]
layout_mode = 2
offset_top = 49.0
offset_right = 186.0
offset_bottom = 96.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Shrink 9.999"
label_settings = SubResource("LabelSettings_hfnsq")
